compiler/typ/tests/fixtures/diagnostics/0811_polyvar_call_payload_mismatch_06.ml.infer.expected
File "0811_polyvar_call_payload_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0811_polyvar_call_payload_mismatch_06 is not a valid module name.

File "0811_polyvar_call_payload_mismatch_06.ml", line 4, characters 22-26:
4 | let _ = read_zeta (`A true)
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
