compiler/typ/tests/fixtures/diagnostics/0811_polyvar_call_payload_mismatch_06.ml
let read_zeta : [ `A of int ] -> int = function
  | `A x -> x

let _ = read_zeta (`A true)
